Warn if rawvideo and an unreadable pix_fmt are written.

Print an error if a combination of rawvideo and an unusual pix_fmt
that will be impossible to decode are written to avi or mov.
Fixes ticket #3545.